<resources>
    <string name="app_name">APExercise1B</string>
    <string name="lato_lato">Lato Lato</string>
    <string name="_199_99_php">199.99 php</string>
    <string name="product_description">Product Description</string>
    <string name="a_toy_that_makes_a_soothing_ticking_sound_for_every_collision_of_the_latos_it_helps_people_with_insomnia_sleep_soundly">A toy that makes a soothing ticking sound for every collision of the Latos. It helps people with insomnia sleep soundly.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="picture_of_the_product">picture of the product</string>
</resources>